2022-07-11-2:

- Fix 'Prose' header on 'Writing' page not linking to 'Prose' subpage.

2022-07-11:

- Added 'Prose' subpage to the 'Writing' page.
- Updated Prose section of main 'Writing' page.
- Improved clarity of 'Legal' page.
- Removed redundant links to obsolete CSS extension from some pages.
- Removed commented code from universal CSS.

2022-07-09:

- Added 'RoyalRoad' to account list.
- Removed 'Movellas' from account list, as that account has been deleted.
- Updated 'Belletristica' account summary to include mention of poetry collections and 'Rooms of the Desolate'.
- Corrected several typos.
- Minor code cleanup.

2022-06-20:

- Fixed height mismatch between left & right footer blocks.

2022-06-17:

- Replaced old logo and favicon with new eye-style theme.
- Removed 'Hardlimit' from account list, as those accounts have been deleted.
- Removed excessive empty space between lines on multi-line footers.
- Fixed a typo in the cookie banner.

2022-05-06:

- Added mentions of "Hallowe'en 2018, Rewritten".
- Switched Mastodon identifier link out for head links, which will hopefully actually work.

2022-04-28:

- Added a cookie acceptance/declination banner.
- Replaced Inkitt link on the Writing page with a Belletristica link.
- Fixed broken link on the Legal page.

2022-04-26-02:

- Codeberg and GitHub pages don't like the fetch() method, it seems.

2022-04-26:

- Added 'Ko-Fi', 'Mastodon', 'Mozilla Addons', 'Telegram' and 'Wikipedia' to account list.
- Updated 'Twitter: Primary' entry to reflect my migration to Mastodon.
- Removed 'Twitter: The Records of Dr Sullivan' from account list, as the account has been deactivated.
- Fixed 'Wordsmith' not displaying in account list.
- Fixed missing link to 'Wikipedia' account and missing link to Twitch on 'Stream Archive' entry.
- Moved account entries to `accounts.json` data file.
- Added link to my Gender & Sexuality Spectrum on Identity page.