@@ -57,8 +57,8 @@ blockquote, p { white-space: pre-line; }
 header { margin-bottom: -50px; }
 #logo {
     float: left;
-    margin-left: 105px;
-    margin-top: -105px;
+    margin-left: 5em;
+    margin-top: -6.25em;
     width: 400px;
     height: auto;
 }
@@ -67,13 +67,13 @@ header { margin-bottom: -50px; }
 }
 #theme-button {
     float: right;
-    margin-top: -103px;
+    margin-top: -9.7em;
     width: 40px;
     height: 40px;
 }
 #font-button {
     float: right;
-    margin-top: -60px;
+    margin-top: -6.45em;
     width: 40px;
     height: 40px;
 }
